# Ore-Raider

./: Cargo.toml  README.md  deny.toml  justfile  renovate.json
.cargo/: config.toml
.github/: semantic.yml
.github/workflows/: verify.yaml
src/: gamestate.rs  main.rs
src/plugins/: colors.rs  mod.rs
src/plugins/game/: mod.rs  sound.rs
src/plugins/init/: mod.rs  setup.rs
src/plugins/menu/: display_settings.rs  main_menu.rs  mod.rs  music.rs  settings_menu.rs  sound_settings.rs
src/plugins/menu/sound/: mod.rs  sound_settings.rs
src/plugins/splash/: mod.rs
src/test_system/: mod.rs
